# multi_experiments

./: .gitignore  README.md  observe_mode.c  polymorphic.c
arm_asm/: arm64_sys_call  arm64_sys_call.c
dynamic_linker/: CMakeLists.txt  build.sh
dynamic_linker/inc/: dl_runtime.h
dynamic_linker/src/: dl_runtime.c  dynamic_entry.S  dynamic_linker.c  dynamic_linker.c.bak  dynamic_linker_new.c
elf/: elf64.h  elf_analys  elf_analys.c
elf/elf_hack/: arm64_sys_call  elf_inject  elf_inject.S  elfinject
mini_libc/: CMakeLists.txt  build.sh  mini_lib.h  mini_libc_entry.S  test_mini_lib  test_mini_lib.c
mini_libc/inc/: mini_lib.h
mini_libc/src/: brk.c  clone.c  close.c  dynamic_entry.S  dynamic_linker.c  fork.c  lock.c  logger.c  lseek.c  malloc.c  mini_libc_entry.S  mmap.c  open.c  printf.c  pthread.c  read.c  socket.c  string.c  write.c
mini_libc/test/: test_mini_lib.c
mmu/: boot.S  link.ld  main.c
oop_in_c/: factory_mode.c  my_list.h
section/: test_section.c  test_section.ld
